--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ authors = ["Caio Raposo <caioraposo@protonmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+flask = "^1.1.1"
+flask-restx = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^5.3.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
