--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest = "^5.3.5"
 tox = "^3.14.5"
 black = {version = "^19.10b0", allow-prereleases = true}
 pre-commit = "^2.1.0"
+flake8 = "^3.7.9"
 
 [build-system]
 requires = ["poetry>=0.12"]
