--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,17 @@ exclude = '''
 )/
 '''
 
+[tool.coverage.paths]
+source = ["src", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["urban_fiesta"]
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 90
+
 [tool.poetry.dependencies]
 python = "^3.8"
 flask = "^1.1.1"
@@ -37,6 +48,8 @@ tox = "^3.14.5"
 black = {version = "^19.10b0", allow-prereleases = true}
 pre-commit = "^2.1.0"
 flake8 = "^3.7.9"
+coverage = {extras = ["toml"], version = "^5.0.3"}
+pytest-cov = "^2.8.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
