--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,12 +44,12 @@ flask-restx = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.5"
-tox = "^3.14.5"
 black = {version = "^19.10b0", allow-prereleases = true}
 pre-commit = "^2.1.0"
 flake8 = "^3.7.9"
 coverage = {extras = ["toml"], version = "^5.0.3"}
 pytest-cov = "^2.8.1"
+nox = "^2019.11.9"
 
 [build-system]
 requires = ["poetry>=0.12"]
