--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,10 +31,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-    - name: Install Tox and Poetry
+    - name: Install Nox and Poetry
       run: |
           pip install tox==3.14.5
           pip install poetry==1.0.0
     - name: Test
       run: |
-        tox
+          nox
