--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ coverage = {extras = ["toml"], version = "^5.0.3"}
 pytest-cov = "^2.8.1"
 nox = "^2019.11.9"
 python-dotenv = "^0.11.0"
+codecov = "^2.0.16"
 
 [build-system]
 requires = ["poetry>=0.12"]
