--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ source = ["src", "*/site-packages"]
 
 [tool.coverage.run]
 branch = true
-source = ["urban_fiesta"]
+source = ["no12"]
 
 [tool.coverage.report]
 show_missing = true
