--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ flask = "^1.1.1"
 flask-restx = "^0.1.1"
 Flask-MongoEngine = "^0.9.5"
 flask-login = "^0.5.0"
+email-validator = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.5"
